about us page updated

--- a/aboutus.html
+++ b/aboutus.html
@@ -4,6 +4,12 @@
 <head>
 
     <title>Ristorante Con Fusion: About Us</title>
+    <!-- Required meta tags always come first-->
+    <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">  
+
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
@@ -37,8 +43,8 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <!-- <div class="col-12 col-sm">
-                </div> -->
+                <div class="col-12 col-sm">
+                </div>
             </div>
         </div>
     </header>
@@ -67,7 +73,7 @@
 
 
         <div class="row-content">
-            <div class="col-12 ">
+            <div class="col-12 col-sm-6">
                 <h2>Corporate Leadership</h2>
                 <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
                 <!-- <div class="d-none d-sm-block"> -->
