--- a/index.html
+++ b/index.html
@@ -87,15 +87,82 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-warning"
-                    data-toggle="tooltip" data-html="true"
-                    title="Or call us at <br><strong> +91 1234567891 </strong>"
-                    data-placement="bottom"
-                    href="#reservef">Reserve Table</a>
+                    <a role="button" class="btn btn-warning" data-toggle="modal" data-target="#resvModal">Reserve Table</a>
                 </div>
             </div>
         </div>
     </header>
+
+    <div class="modal fade" id="resvModal" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a table </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <div class="col-sm col-md-2">
+                                <label for="NoOfGuests">Number of guests   </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="NOG1" id="NOG1" value="1">
+                                <label class="form-check-label" for="inlineRadio1">1</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="NOG2" id="NOG2" value="2">
+                                <label class="form-check-label" for="inlineRadio1">2</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="NOG3" id="NOG3" value="3">
+                                <label class="form-check-label" for="inlineRadio1">3</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="NOG4" id="NOG4" value="4">
+                                <label class="form-check-label" for="inlineRadio1">4</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="NOG5" id="NOG5" value="5">
+                                <label class="form-check-label" for="inlineRadio1">5</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="NOG6" id="NOG6" value="6">
+                                <label class="form-check-label" for="inlineRadio1">6</label>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="section" class="col-md-2">Section</label>
+                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                    <input type="radio" name="section" id="non-smoke" autocomplete="off" checked>Non-Smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                    <input type="radio" name="section" id="smoke" autocomplete="off"> Smoke
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="DateAndTime" class="col-md-2">Date and Time</label>
+                            <div class="col-md-4">
+                                <input class="form-control" id="Date" name="Date" placeholder="Date">
+                            </div>
+                            <div class="col-md-4">
+                                <input class="form-control" id="Time" name="Time" placeholder="Time">
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <div class="offset-sm-1 offset-md-2">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="container">
 
@@ -212,61 +279,7 @@
             </div>
         </div>
 
-        <div class="row row-content align-items-center" id="reservef">
-            <div class="col-12 col-sm-8 offset-md-2">
-                <div class="card">
-                    <h3 class="card-header text-white bg-warning">Reserve a table</h3>
-                    <div class="card-body">
-                        <form>
-                            <div class="form-group row">
-                                <div class="col-sm col-md-2">
-                                    <label for="NoOfGuests">Number of guests   </label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="NOG1" id="NOG1" value="1">
-                                    <label class="form-check-label" for="inlineRadio1">1</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="NOG2" id="NOG2" value="2">
-                                    <label class="form-check-label" for="inlineRadio1">2</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="NOG3" id="NOG3" value="3">
-                                    <label class="form-check-label" for="inlineRadio1">3</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="NOG4" id="NOG4" value="4">
-                                    <label class="form-check-label" for="inlineRadio1">4</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="NOG5" id="NOG5" value="5">
-                                    <label class="form-check-label" for="inlineRadio1">5</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="NOG6" id="NOG6" value="6">
-                                    <label class="form-check-label" for="inlineRadio1">6</label>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="DateAndTime" class="col-md-2">Date and Time</label>
-                                <div class="col-md-4">
-                                    <input class="form-control" id="Date" name="Date" placeholder="Date">
-                                </div>
-                                <div class="col-md-4">
-                                    <input class="form-control" id="Time" name="Time" placeholder="Time">
-                                </div>
-                            </div>
-    
-                            <div class="form-group row">
-                                <div class="offset-sm-1 offset-md-2">
-                                    <button type="submit" class="btn btn-primary">Reserve</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
     </div>
 
     <footer class="footer">
