--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
                         <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                     </ul>
                     <span class="navbar-text">
-                        <a data-toggle="modal" data-target="#loginModal">
+                        <a id="loginToggle">
                         <span class="fa fa-sign-in"></span> Login</a>
                     </span>
                 </div>            
         </div>
     </nav>
+
+    <!-- login modal -->
 
     <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="content">
@@ -75,6 +77,8 @@
             </div>
         </div>
     </div>
+
+    <!-- Reservation modal -->
 
     <div class="modal fade" id="resvModal" role="dialog">
         <div class="modal-dialog modal-lg" role="content">
@@ -147,6 +151,8 @@
         </div>
     </div>
 
+    <!-- Header jumbotron -->
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header ">
@@ -158,7 +164,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-warning" data-toggle="modal" data-target="#resvModal">Reserve Table</a>
+                    <a role="button" class="btn btn-warning" id="resvToggle">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -166,6 +172,7 @@
 
     <div class="container">
 
+        <!-- carousel -->
         <div class="row row-content">
             <div class="col">
                 <div id="mycarousel" class="carousel slide" data-ride="carousel">
@@ -286,6 +293,8 @@
         
     </div>
 
+    <!-- footer -->
+    
     <footer class="footer">
         <div class="container">
             <div class="row">             
@@ -332,6 +341,8 @@
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+        <!-- js to operate carousel -->
         <script>
             $(document).ready(function(){
                 $("#mycarousel").carousel({interval : 2000});
@@ -349,6 +360,21 @@
                 });
             });
         </script>
+
+        <!-- Js to operate login and reserve buttons -->
+        <script>
+            $(document).ready(function(){
+                $("#loginToggle").click(function(){
+                    $("#loginModal").modal("toggle");
+                });
+                $("#resvToggle").click(function(){
+                    $("#resvModal").modal("toggle");
+                });
+            });
+
+        </script>
+
+
 </body>
 
 </html>
