--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
                         <div class="carousel-item">
                             <img class="d-block img-fluid"
-                            src="img/alberto.png" alt="alberto">
+                            src="img/pexels-taryn-elliott-4457124.jpg" alt="alberto">
                             <div class="carousel-caption d-none d-md-block">
                                 <h2>Alberto Somayya</h2>
                                 <h4>Executive Chef</h4>
@@ -279,7 +279,7 @@
             <div class="col col-sm order-sm-first col-md">
              <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
-                            src="img/alberto.png" alt="Alberto Somayya">
+                            src="img/pexels-taryn-elliott-4457124.jpg" alt="Alberto Somayya">
                     <div class="media-body">
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
