fix for reservation model

--- a/index.html
+++ b/index.html
@@ -97,27 +97,27 @@
                                 <label for="NoOfGuests">Number of guests   </label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="NOG1" id="NOG1" value="1">
+                                <input class="form-check-input" type="radio" name="NOG" id="NOG1" value="1">
                                 <label class="form-check-label" for="inlineRadio1">1</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="NOG2" id="NOG2" value="2">
+                                <input class="form-check-input" type="radio" name="NOG" id="NOG2" value="2">
                                 <label class="form-check-label" for="inlineRadio1">2</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="NOG3" id="NOG3" value="3">
+                                <input class="form-check-input" type="radio" name="NOG" id="NOG3" value="3">
                                 <label class="form-check-label" for="inlineRadio1">3</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="NOG4" id="NOG4" value="4">
+                                <input class="form-check-input" type="radio" name="NOG" id="NOG4" value="4">
                                 <label class="form-check-label" for="inlineRadio1">4</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="NOG5" id="NOG5" value="5">
+                                <input class="form-check-input" type="radio" name="NOG" id="NOG5" value="5">
                                 <label class="form-check-label" for="inlineRadio1">5</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="NOG6" id="NOG6" value="6">
+                                <input class="form-check-input" type="radio" name="NOG" id="NOG6" value="6">
                                 <label class="form-check-label" for="inlineRadio1">6</label>
                             </div>
                         </div>
