--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="CSS/style.css" rel="stylesheet">
 
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <!-- endbuild -->
 </head>
 
